# frog

./: CMakeLists.txt  README  README.in  cardgraphicsscene.cpp  cardgraphicsscene.h  cardsvgitem.cpp  cardsvgitem.h  frog.cpp  frog.h  frog.kdev4  frogconfigure.h.in  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.ui  pile.cpp  pile.h  pilebase.cpp  pilebase.h  pilefault.cpp  pilefault.h  pilepack.cpp  pilepack.h  pilereserve.cpp  pilereserve.h
help_browser/: helpbrowser.cpp  helpform.ui
